Programming languages and paradigms/Interpreter/grammar/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Grammar/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> 'func' Ident '(' ListArg ')' Type Block   (5)
	TopDef -> 'func' Ident '(' ListArg ')' Block       (6)
	TopDef -> Decl                                     (7)
	ListTopDef -> TopDef                               (8)
	ListTopDef -> TopDef ListTopDef                    (9)
	Arg -> ListIdent Type                              (10)
	ListIdent -> Ident                                 (11)
	ListIdent -> Ident ',' ListIdent                   (12)
	ListArg ->                                         (13)
	ListArg -> Arg                                     (14)
	ListArg -> Arg ',' ListArg                         (15)
	Block -> '{' ListStmt '}'                          (16)
	ListStmt ->                                        (17)
	ListStmt -> Stmt ListStmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> Block                                      (20)
	Stmt -> Decl                                       (21)
	Stmt -> ListExpr '=' ListExpr ';'                  (22)
	Stmt -> 'for' Stmt Expr ';' Stmt Block             (23)
	Stmt -> 'for' Expr Block                           (24)
	Stmt -> Ident '++' ';'                             (25)
	Stmt -> Ident '--' ';'                             (26)
	Stmt -> 'return' Expr ';'                          (27)
	Stmt -> 'return' ';'                               (28)
	Stmt -> 'if' Expr Block                            (29)
	Stmt -> 'if' Expr Block 'else' Block               (30)
	Stmt -> 'print' '(' ListExpr ')' ';'               (31)
	Stmt -> Expr ';'                                   (32)
	Decl -> 'var' ListIdent Type ';'                   (33)
	Decl -> 'var' ListIdent '=' ListExpr ';'           (34)
	Decl -> 'var' ListIdent Type '=' ListExpr ';'      (35)
	Type -> 'int'                                      (36)
	Type -> 'string'                                   (37)
	Type -> 'bool'                                     (38)
	Type -> 'func' '(' ListType ')' Type               (39)
	Type -> 'func' '(' ListType ')'                    (40)
	Type -> '*' Type                                   (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	Expr8 -> Ident '(' ListExpr ')'                    (45)
	Expr8 -> '(' Expr ')'                              (46)
	Expr7 -> 'func' '(' ListArg ')' Type Block         (47)
	Expr7 -> 'func' '(' ListArg ')' Block              (48)
	Expr7 -> Expr8                                     (49)
	Expr6 -> Expr7 '(' ListExpr ')'                    (50)
	Expr6 -> Ident                                     (51)
	Expr6 -> Integer                                   (52)
	Expr6 -> 'true'                                    (53)
	Expr6 -> 'false'                                   (54)
	Expr6 -> String                                    (55)
	Expr6 -> 'nil'                                     (56)
	Expr6 -> Expr7                                     (57)
	Expr5 -> '&' Expr6                                 (58)
	Expr5 -> '*' Expr6                                 (59)
	Expr5 -> '-' Expr6                                 (60)
	Expr5 -> '!' Expr6                                 (61)
	Expr5 -> Expr6                                     (62)
	Expr4 -> Expr4 MulOp Expr5                         (63)
	Expr4 -> Expr5                                     (64)
	Expr3 -> Expr3 AddOp Expr4                         (65)
	Expr3 -> Expr4                                     (66)
	Expr2 -> Expr2 RelOp Expr3                         (67)
	Expr2 -> Expr3                                     (68)
	Expr1 -> Expr2 '&&' Expr1                          (69)
	Expr1 -> Expr2                                     (70)
	Expr -> Expr1 '||' Expr                            (71)
	Expr -> Expr1                                      (72)
	ListExpr ->                                        (73)
	ListExpr -> Expr                                   (74)
	ListExpr -> Expr ',' ListExpr                      (75)
	AddOp -> '+'                                       (76)
	AddOp -> '-'                                       (77)
	MulOp -> '*'                                       (78)
	MulOp -> '/'                                       (79)
	MulOp -> '%'                                       (80)
	RelOp -> '<'                                       (81)
	RelOp -> '<='                                      (82)
	RelOp -> '>'                                       (83)
	RelOp -> '>='                                      (84)
	RelOp -> '=='                                      (85)
	RelOp -> '!='                                      (86)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'for'          { PT _ (TS _ 25) }
	'func'         { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'int'          { PT _ (TS _ 28) }
	'nil'          { PT _ (TS _ 29) }
	'print'        { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'var'          { PT _ (TS _ 34) }
	'{'            { PT _ (TS _ 35) }
	'||'           { PT _ (TS _ 36) }
	'}'            { PT _ (TS _ 37) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	ListTopDef      rules 8, 9
	Arg             rule  10
	ListIdent       rules 11, 12
	ListArg         rules 13, 14, 15
	Block           rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Decl            rules 33, 34, 35
	Type            rules 36, 37, 38, 39, 40, 41
	ListType        rules 42, 43, 44
	Expr8           rules 45, 46
	Expr7           rules 47, 48, 49
	Expr6           rules 50, 51, 52, 53, 54, 55, 56, 57
	Expr5           rules 58, 59, 60, 61, 62
	Expr4           rules 63, 64
	Expr3           rules 65, 66
	Expr2           rules 67, 68
	Expr1           rules 69, 70
	Expr            rules 71, 72
	ListExpr        rules 73, 74, 75
	AddOp           rules 76, 77
	MulOp           rules 78, 79, 80
	RelOp           rules 81, 82, 83, 84, 85, 86

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'func'         shift, and enter state 7
	'var'          shift, and enter state 8

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Decl           goto state 6

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'bool'         reduce using rule 1
	'func'         reduce using rule 1
	'int'          reduce using rule 1
	'string'       reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 8)
	ListTopDef -> TopDef . ListTopDef                   (rule 9)

	'func'         shift, and enter state 7
	'var'          shift, and enter state 8
	%eof           reduce using rule 8

	TopDef         goto state 4
	ListTopDef     goto state 12
	Decl           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Decl .                                    (rule 7)

	'func'         reduce using rule 7
	'var'          reduce using rule 7
	%eof           reduce using rule 7


State 7

	TopDef -> 'func' . Ident '(' ListArg ')' Type Block    (rule 5)
	TopDef -> 'func' . Ident '(' ListArg ')' Block      (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 11

State 8

	Decl -> 'var' . ListIdent Type ';'                  (rule 33)
	Decl -> 'var' . ListIdent '=' ListExpr ';'          (rule 34)
	Decl -> 'var' . ListIdent Type '=' ListExpr ';'     (rule 35)

	L_Ident        shift, and enter state 2

	Ident          goto state 9
	ListIdent      goto state 10

State 9

	ListIdent -> Ident .                                (rule 11)
	ListIdent -> Ident . ',' ListIdent                  (rule 12)

	'*'            reduce using rule 11
	','            shift, and enter state 21
	'='            reduce using rule 11
	'bool'         reduce using rule 11
	'func'         reduce using rule 11
	'int'          reduce using rule 11
	'string'       reduce using rule 11


State 10

	Decl -> 'var' ListIdent . Type ';'                  (rule 33)
	Decl -> 'var' ListIdent . '=' ListExpr ';'          (rule 34)
	Decl -> 'var' ListIdent . Type '=' ListExpr ';'     (rule 35)

	'*'            shift, and enter state 15
	'='            shift, and enter state 16
	'bool'         shift, and enter state 17
	'func'         shift, and enter state 18
	'int'          shift, and enter state 19
	'string'       shift, and enter state 20

	Type           goto state 14

State 11

	TopDef -> 'func' Ident . '(' ListArg ')' Type Block    (rule 5)
	TopDef -> 'func' Ident . '(' ListArg ')' Block      (rule 6)

	'('            shift, and enter state 13


State 12

	ListTopDef -> TopDef ListTopDef .                   (rule 9)

	%eof           reduce using rule 9


State 13

	TopDef -> 'func' Ident '(' . ListArg ')' Type Block    (rule 5)
	TopDef -> 'func' Ident '(' . ListArg ')' Block      (rule 6)

	')'            reduce using rule 13
	L_Ident        shift, and enter state 2

	Ident          goto state 9
	Arg            goto state 51
	ListIdent      goto state 52
	ListArg        goto state 53

State 14

	Decl -> 'var' ListIdent Type . ';'                  (rule 33)
	Decl -> 'var' ListIdent Type . '=' ListExpr ';'     (rule 35)

	';'            shift, and enter state 49
	'='            shift, and enter state 50


State 15

	Type -> '*' . Type                                  (rule 41)

	'*'            shift, and enter state 15
	'bool'         shift, and enter state 17
	'func'         shift, and enter state 18
	'int'          shift, and enter state 19
	'string'       shift, and enter state 20

	Type           goto state 48

State 16

	Decl -> 'var' ListIdent '=' . ListExpr ';'          (rule 34)

	'!'            shift, and enter state 37
	'&'            shift, and enter state 38
	'('            shift, and enter state 39
	'*'            shift, and enter state 40
	'-'            shift, and enter state 41
	';'            reduce using rule 73
	'false'        shift, and enter state 42
	'func'         shift, and enter state 43
	'nil'          shift, and enter state 44
	'true'         shift, and enter state 45
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 46
	L_quoted       shift, and enter state 47

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Expr8          goto state 27
	Expr7          goto state 28
	Expr6          goto state 29
	Expr5          goto state 30
	Expr4          goto state 31
	Expr3          goto state 32
	Expr2          goto state 33
	Expr1          goto state 34
	Expr           goto state 35
	ListExpr       goto state 36

State 17

	Type -> 'bool' .                                    (rule 38)

	')'            reduce using rule 38
	','            reduce using rule 38
	';'            reduce using rule 38
	'='            reduce using rule 38
	'{'            reduce using rule 38


State 18

	Type -> 'func' . '(' ListType ')' Type              (rule 39)
	Type -> 'func' . '(' ListType ')'                   (rule 40)

	'('            shift, and enter state 23


State 19

	Type -> 'int' .                                     (rule 36)

	')'            reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36
	'='            reduce using rule 36
	'{'            reduce using rule 36


State 20

	Type -> 'string' .                                  (rule 37)

	')'            reduce using rule 37
	','            reduce using rule 37
	';'            reduce using rule 37
	'='            reduce using rule 37
	'{'            reduce using rule 37


State 21

	ListIdent -> Ident ',' . ListIdent                  (rule 12)

	L_Ident        shift, and enter state 2

	Ident          goto state 9
	ListIdent      goto state 22

State 22

	ListIdent -> Ident ',' ListIdent .                  (rule 12)

	'*'            reduce using rule 12
	'='            reduce using rule 12
	'bool'         reduce using rule 12
	'func'         reduce using rule 12
	'int'          reduce using rule 12
	'string'       reduce using rule 12


State 23

	Type -> 'func' '(' . ListType ')' Type              (rule 39)
	Type -> 'func' '(' . ListType ')'                   (rule 40)

	')'            reduce using rule 42
	'*'            shift, and enter state 15
	'bool'         shift, and enter state 17
	'func'         shift, and enter state 18
	'int'          shift, and enter state 19
	'string'       shift, and enter state 20

	Type           goto state 84
	ListType       goto state 85

State 24

	Expr8 -> Ident . '(' ListExpr ')'                   (rule 45)
	Expr6 -> Ident .                                    (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	'('            shift, and enter state 83
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'='            reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'{'            reduce using rule 51
	'||'           reduce using rule 51


State 25

	Expr6 -> Integer .                                  (rule 52)
